deploy/k8s/05_asterisk_ws_monitor.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: py-phone-caller
  name: asterisk-ws-monitor-deployment
  labels:
    app: asterisk-ws-monitor
spec:
  strategy:
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: asterisk-ws-monitor
  template:
    metadata:
      labels:
        app: asterisk-ws-monitor
    spec:
      containers:
        - name: asterisk-ws-monitor
          image: quay.io/py-phone-caller/asterisk_ws_monitor:1.0.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: caller-config
              mountPath: /app/src/config/settings.toml
              subPath: settings.toml
      volumes:
        - name: caller-config
          configMap:
            name: py-phone-caller-config
