deploy/k8s/15_celery_worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: py-phone-caller
  name: celery-worker-deployment
  labels:
    app: celery-worker
spec:
  strategy:
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: celery-worker
  template:
    metadata:
      labels:
        app: celery-worker
    spec:
      containers:
        - name: celery-worker
          image: quay.io/py-phone-caller/celery_worker:1.0.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: caller-config
              mountPath: /app/src/config/settings.toml
              subPath: settings.toml
      volumes:
        - name: caller-config
          configMap:
            name: py-phone-caller-config
