deploy/k8s/10_caller_sms.yml
apiVersion: v1
kind: Service
metadata:
  namespace: py-phone-caller
  name: caller-sms-service
spec:
  type: ClusterIP
  ports:
    - port: 8085
      name: http-8085
      targetPort: 8085
      protocol: TCP
  selector:
    app: caller-sms
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: py-phone-caller
  name: caller-sms-deployment
  labels:
    app: caller-sms
spec:
  strategy:
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: caller-sms
  template:
    metadata:
      labels:
        app: caller-sms
    spec:
      containers:
        - name: caller-sms
          image: quay.io/py-phone-caller/caller_sms:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8085
          livenessProbe:
            httpGet:
              path: /health
              port: 8085
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /health
              port: 8085
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - name: caller-config
              mountPath: /app/src/config/settings.toml
              subPath: settings.toml
      volumes:
        - name: caller-config
          configMap:
            name: py-phone-caller-config
