deploy/k8s/16_haproxy.yml
apiVersion: v1
kind: Service
metadata:
  namespace: py-phone-caller
  name: haproxy-service
spec:
  type: NodePort
  ports:
    - port: 8080
      name: http-8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: haproxy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: py-phone-caller
  name: haproxy-deployment
  labels:
    app: haproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: haproxy
  template:
    metadata:
      labels:
        app: haproxy
    spec:
      containers:
        - name: haproxy
          image: docker.io/library/haproxy:2.8-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /usr/local/etc/haproxy/haproxy.cfg
              subPath: haproxy.cfg
      volumes:
        - name: config-volume
          configMap:
            name: haproxy-config
