deploy/k8s/02_ingress.yml
# Kubernetes Ingress for py-phone-caller
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: py-phone-caller
  name: py-phone-caller-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: app.py-phone-caller.lan
      http:
        paths:
          - backend:
              service:
                name: haproxy-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
